poceo rad na LisnicaCommand

--- a/Lisnica.vcxproj
+++ b/Lisnica.vcxproj
@@ -132,12 +132,14 @@
     <ClCompile Include="Dionica.cpp" />
     <ClCompile Include="Lisnica.cpp" />
     <ClCompile Include="LisnicaClass.cpp" />
+    <ClCompile Include="LisnicaCommand.cpp" />
     <ClCompile Include="Obveznica.cpp" />
     <ClCompile Include="VrijednosniPapir.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Dionica.h" />
     <ClInclude Include="LisnicaClass.h" />
+    <ClInclude Include="LisnicaCommand.h" />
     <ClInclude Include="Obveznica.h" />
     <ClInclude Include="VrijednosniPapir.h" />
   </ItemGroup>
