Dodao test metodu za konstruktor od LisnicaCommand

--- a/NoviLisnicaTest/NoviLisnicaTest.vcxproj
+++ b/NoviLisnicaTest/NoviLisnicaTest.vcxproj
@@ -162,6 +162,7 @@
   <ItemGroup>
     <ClCompile Include="..\Dionica.cpp" />
     <ClCompile Include="..\LisnicaClass.cpp" />
+    <ClCompile Include="..\LisnicaCommand.cpp" />
     <ClCompile Include="..\Obveznica.cpp" />
     <ClCompile Include="..\VrijednosniPapir.cpp" />
     <ClCompile Include="NoviLisnicaTest.cpp" />
