--- a/NoviLisnicaTest/NoviLisnicaTest.vcxproj.filters
+++ b/NoviLisnicaTest/NoviLisnicaTest.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\LisnicaClass.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\LisnicaCommand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
